# kpeoplevcard

./: .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  KFPeopleVCardConfig.cmake.in  Messages.sh
autotests/: CMakeLists.txt  kpeoplevcardtest.cpp
po/ar/: kpeoplevcard.po
po/ca/: kpeoplevcard.po
po/ca@valencia/: kpeoplevcard.po
po/cs/: kpeoplevcard.po
po/de/: kpeoplevcard.po
po/en_GB/: kpeoplevcard.po
po/eo/: kpeoplevcard.po
po/es/: kpeoplevcard.po
po/eu/: kpeoplevcard.po
po/fi/: kpeoplevcard.po
po/fr/: kpeoplevcard.po
po/gl/: kpeoplevcard.po
po/he/: kpeoplevcard.po
po/hi/: kpeoplevcard.po
po/hu/: kpeoplevcard.po
po/is/: kpeoplevcard.po
po/it/: kpeoplevcard.po
po/ja/: kpeoplevcard.po
po/ka/: kpeoplevcard.po
po/ko/: kpeoplevcard.po
po/lt/: kpeoplevcard.po
po/nl/: kpeoplevcard.po
po/nn/: kpeoplevcard.po
po/pl/: kpeoplevcard.po
po/pt/: kpeoplevcard.po
po/pt_BR/: kpeoplevcard.po
po/ro/: kpeoplevcard.po
po/ru/: kpeoplevcard.po
po/sk/: kpeoplevcard.po
po/sl/: kpeoplevcard.po
po/sv/: kpeoplevcard.po
po/tr/: kpeoplevcard.po
po/uk/: kpeoplevcard.po
po/vi/: kpeoplevcard.po
po/zh_CN/: kpeoplevcard.po
po/zh_TW/: kpeoplevcard.po
src/: CMakeLists.txt  kpeoplevcard.cpp  kpeoplevcard.h  kpeoplevcard.json  kpeoplevcard_source_plugin.desktop  main.cpp
